Proyecto vida HTML

--- a/Proyecto-vida/Quien soy.html
+++ b/Proyecto-vida/Quien soy.html
@@ -28,7 +28,7 @@
     </p>
 
     <p>Tengo 20 años, vivo con mis padres y por el momento estudio informática
-Y trabajo para CLARO Empresas. 
+Y trabajo para CLARO Empresas 
 </p>
  </body>
 </html>
